6-21-19
- thread specific breakpoints and watchpoints finished

6-20-19
- iosdbg remembers command history between sessions
- done implementing thread safe iteration for debuggee breakpoints,
watchpoints, and threads
- fixed up ops_threadupdate logic

6-19-19
- new thread to update debuggee threads every second or right when one goes
away
- finished thread specific breakpoints
- implemented thread-safe way to iterate through debuggee's threads,
still need to do breakpoints and watchpoints
- working on fixing up ops_threadupdate logic

6-18-19
- shutdown threads upon detach
- rename thread.c functions
- prepare_and_call_cmdfunc shows cmd documentation on syntax error again
- working on refactoring breakpoint.c and watchpoint.c
- working on thread specific watchpoints

6-17-19
- fix disassemble and compiler error

6-16-19
- routinely update thread specific breakpoints

6-15-19
- wrote functions to get and set register values

6-14-19
- somehow, for a little over three months after getting rid of
catch_mach_exception_raise, I forgot to reimplement the case where
an exception is not caused by a soft signal, single step, breakpoint, or
watchpoint. That functionality has been reintroduced
- get rid of those three printing threads and introduce a new, thread safe,
centralized printing system which prevents garbled/double reprompts

6-13-19
- each thread has its own last_hit_bkpt_ID
- get rid of resume_after_exception
- use sigaction instead of signal 
- call ops_suspend and ops_resume instead of debuggee->suspend() and
debuggee->resume()

6-12-19
- detach before we send the kill signal for the kill command
- don't use the same space on the stack for multiple exceptions, exception
handling is almost rock solid now
- each thread has its own last_hit_wp_loc and last_hit_wp_PC

6-11-19
- check if debuggee is suspended based on suspend count instead of manually
flipping a flag
- making output nicer

6-5-19
- rewriting exception & mutex logic

6-4-19