@@ -86,7 +86,6 @@ static struct machthread *machthread_new(mach_port_t thread_port,
     mt->last_hit_wp_loc = 0;
     mt->last_hit_wp_PC = 0;
     mt->last_hit_bkpt_ID = 0;
-    mt->ignore_upcoming_exception = 0;
 
     kern_return_t kret = KERN_SUCCESS;
 
@@ -373,7 +372,6 @@ void update_thread_list(thread_act_port_array_t threads,
         return;
     }
 
-
     /* Check if there are no threads in the linked list. This should only
      * be the case right after we attach to our target program.
      */
@@ -403,17 +401,11 @@ void update_thread_list(thread_act_port_array_t threads,
         unsigned long last_hit_wp_loc;
         unsigned long last_hit_wp_PC;
         int last_hit_bkpt_ID;
-        int ignore_upcoming_exception;
     };
-
-    //int num_good_threads = 0;
 
     int infos_cnt = 0;
     struct th_excinfo **infos = malloc(infos_cnt);
     
-   // printf("%s: cnt %d, debuggee->num_threads %d\n", __func__, cnt,
-     //       debuggee->thread_count);
-
     TH_FOREACH(current){
         struct machthread *t = current->data;
 
@@ -434,7 +426,6 @@ void update_thread_list(thread_act_port_array_t threads,
         info->last_hit_wp_loc = t->last_hit_wp_loc;
         info->last_hit_wp_PC = t->last_hit_wp_PC;
         info->last_hit_bkpt_ID = t->last_hit_bkpt_ID;
-        info->ignore_upcoming_exception = t->ignore_upcoming_exception;
 
         infos[infos_cnt - 1] = info;
 
@@ -451,8 +442,6 @@ void update_thread_list(thread_act_port_array_t threads,
 
         if(add){
             for(int j=0; j<infos_cnt; j++){
-                //printf("%s: looking at infos[j] %p j %d\n",
-                  //      __func__, infos[j], j);
                 if(infos[j]->owner == add->port){
                     add->just_hit_watchpoint = infos[j]->just_hit_watchpoint;
                     add->just_hit_breakpoint = infos[j]->just_hit_breakpoint;
@@ -460,11 +449,9 @@ void update_thread_list(thread_act_port_array_t threads,
                     add->last_hit_wp_loc = infos[j]->last_hit_wp_loc;
                     add->last_hit_wp_PC = infos[j]->last_hit_wp_PC;
                     add->last_hit_bkpt_ID = infos[j]->last_hit_bkpt_ID;
-                    add->ignore_upcoming_exception = infos[j]->ignore_upcoming_exception;
 
                     break;
                 }
-
             }
 
             debuggee->thread_count = i+1;
